SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geoipbackend \
	geosqlbackend \
	gmysqlbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	lmdbbackend \
	luabackend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
