SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geoipbackend \
	geosqlbackend \
	gmysqlbackend \
	godbcbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	luabackend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
