SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geobackend \
	geoipbackend \
	geosqlbackend \
	gmysqlbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	lmdbbackend \
	luabackend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
